--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </ul>
   <button type="button" name="button" onclick="window.location.href = 'index1.html'">START GAME</button>
   <footer>
-    Made with ❤️ by <p class="a">Sailesh Nama</p>
+    Made with ❤️ by <p class="a">Aahan & Vihan</p>
     <br>
     © All Rights Reserved
   </footer>
